# miam

./: .gitignore  .miam.yml.example  Cargo.toml  README.md  RELEASING.md  example-config.yml  install.sh
.github/workflows/: release.yml
src/: app.rs  cache.rs  config.rs  feed.rs  likes.rs  main.rs  reader.rs  seen.rs
src/ui/: colors.rs  dialogs.rs  feed_list.rs  mod.rs  reader.rs  sidebar.rs  utils.rs
