[package]
name = "miam"
version = "0.6.5"
edition = "2021"
authors = ["saravenpi"]
description = "A minimalist RSS feed manager TUI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rss = "2.0"
atom_syndication = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
readability = { version = "0.3", default-features = false }
textwrap = "0.16"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1"
